--- a/edi.html
+++ b/edi.html
@@ -2309,7 +2309,7 @@
                         </th>
                         <td>
                           <span class="targetNS"
-                            >http://xlate.io/EDISchema/v4</span
+                            >http://freighttrust.io/EDISchema/v4</span
                           >
                         </td>
                       </tr>
@@ -2412,7 +2412,7 @@
                         <td><a id="ns_tns">tns</a></td>
                         <td>
                           <span class="targetNS"
-                            >http://xlate.io/EDISchema/v4</span
+                            >http://freighttrust.io/EDISchema/v4</span
                           >
                         </td>
                       </tr>
@@ -2453,7 +2453,7 @@
                   <div class="panel-body">
                     <pre
                       class="codehilite"
-                    ><span class="nt">&lt;schema</span> <span class="na">targetNamespace=</span><span class="s">"http://xlate.io/EDISchema/v4"</span> <span class="na">elementFormDefault=</span><span class="s">"qualified"</span><span class="nt">&gt;</span>
+                    ><span class="nt">&lt;schema</span> <span class="na">targetNamespace=</span><span class="s">"http://freighttrust.io/EDISchema/v4"</span> <span class="na">elementFormDefault=</span><span class="s">"qualified"</span><span class="nt">&gt;</span>
 <span class="scContent">...</span>
 <span class="nt">&lt;/schema&gt;</span>
 </pre>
